unpackaged/main/default/objects/FilterFieldsSearch__c/FilterFieldsSearch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>07/22/16 - Used for VFpage: AccountSearch</description>
    <label>FilterFieldsSearch</label>
</CustomObject>