unpackaged/main/default/objects/FilterFieldsSearch__c/fields/AccSearch_LimitSize__c.field-meta.xml
<CustomField>
    <fullName>AccSearch_LimitSize__c</fullName>
    <label>AccSearch_LimitSize</label>
    <length>255</length>
    <type>Text</type>
</CustomField>