unpackaged/main/default/objects/FilterFieldsSearch__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ContactName</label>
    <type>Checkbox</type>
</CustomField>